--- a/pages/resume.html
+++ b/pages/resume.html
@@ -64,7 +64,7 @@
         </div>
     </nav>
     <main class="container">
-        <section class="resume-section">
+        <section class="resume-section" id="resume-section">
             <h2>My Resume</h2>
             <iframe class="resume-preview" src="../docs/Resume_Rakshit.pdf"></iframe>
         </section>
@@ -91,7 +91,7 @@
 
     <!-- Floating Action Button -->
     <div class="fab">
-        <a href="#top" class="fab-button">
+        <a href="#resume-section" class="fab-button">
             <i class="fas fa-arrow-up"></i>
         </a>
     </div>
