--- a/projects/project2.html
+++ b/projects/project2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project || Rakshit Gupta</title>
+    <title>Project Two | Rakshit Gupta</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" type="image/png" href="../assets/icon.png">
@@ -49,67 +49,68 @@
     </nav>
     <main class="container">
         <section class="project-detail">
-            <h2 style="font-size:2.5rem; margin-bottom:18px;">💻 Test Platform Using Linux Shell Scripting</h2>
-            <a href="https://github.com/Rakshitgupta9/Test-Platform-Using-Linux-Shell-scripting" target="_blank"
+            <h2 style="font-size:2.5rem; margin-bottom:18px;">🚌 Bus Route Management System Using A* Algorithm</h2>
+            <a href="https://github.com/Rakshitgupta9/Bus-Route-Management-using-A-star-Algo" target="_blank"
                 rel="noopener" class="download-btn"
                 style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on GitHub <i
                     class="fab fa-github"></i></a>
             <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Project Overview</h3>
-            <p style="font-size:1.18rem; line-height:1.7;">This project is a login-based Online Test Platform created on
-                Linux using shell scripting. It leverages pattern matching commands and file handling concepts to
-                provide a secure, interactive, and automated test-taking experience directly in the terminal.</p>
+            <p style="font-size:1.18rem; line-height:1.7;">Bus Route Management System Using A* Algorithm is a web
+                application designed to
+                simplify the process of booking bus seats, managing routes, and accessing user profiles. It integrates a
+                dynamic map for selecting start and end locations, with automatic route calculation and pricing based on
+                distance.</p>
             <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">✨ Features</h3>
             <div class="feature-cards">
                 <div class="feature-card">
-                    <h4>🔐 Login/Sign-Up System</h4>
+                    <h4>🔐 Login/Register</h4>
                     <ul>
-                        <li>Secure user authentication with username and password</li>
-                        <li>Sign-up and sign-in options for new and returning users</li>
+                        <li>Secure user authentication with MongoDB</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>⏰ Timed Test Sessions</h4>
+                    <h4>🎫 Interactive Bus Booking</h4>
                     <ul>
-                        <li>Each question is timed (30 seconds per question)</li>
-                        <li>Automatic timeout and progress to next question</li>
+                        <li>Book seats with route selection on an interactive map or search</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>🎲 Randomized Questions</h4>
+                    <h4>💰 Dynamic Pricing</h4>
                     <ul>
-                        <li>Random selection of 10 questions from a question bank</li>
-                        <li>Ensures a unique test experience for each attempt</li>
+                        <li>Pricing calculated based on distance</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>📊 Result & Review</h4>
+                    <h4>📋 My Bookings</h4>
                     <ul>
-                        <li>Displays total score and correct answers after test completion</li>
-                        <li>Option to retake the test, view answers, or go to profile</li>
+                        <li>View and cancel bookings</li>
                     </ul>
                 </div>
                 <div class="feature-card">
                     <h4>👤 Profile Management</h4>
                     <ul>
-                        <li>View and manage user profile details</li>
+                        <li>Access personal details and manage sessions</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>🐚 Shell Scripting Concepts</h4>
+                    <h4>🗺️ Map Integration</h4>
                     <ul>
-                        <li>Pattern matching, file handling, and process management</li>
-                        <li>Use of arrays, functions, and control structures in bash</li>
+                        <li>Search and select routes using OpenStreetMap and Leaflet</li>
                     </ul>
                 </div>
             </div>
             <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">💻 Tech Stack</h3>
             <div class="tech-slider">
                 <div class="tech-track">
-                    <div class="tech-card">Linux</div>
-                    <div class="tech-card">Bash Shell Scripting</div>
-                    <div class="tech-card">File Handling</div>
-                    <div class="tech-card">Pattern Matching</div>
-                    <div class="tech-card">Process Management</div>
+                    <div class="tech-card">Python (Flask)</div>
+                    <div class="tech-card">HTML</div>
+                    <div class="tech-card">CSS</div>
+                    <div class="tech-card">JavaScript</div>
+                    <div class="tech-card">MongoDB (Atlas)</div>
+                    <div class="tech-card">Flask-PyMongo</div>
+                    <div class="tech-card">Leaflet.js</div>
+                    <div class="tech-card">Leaflet Routing Machine</div>
+                    <div class="tech-card">Leaflet Control Geocoder</div>
                 </div>
             </div>
         </section>
