--- a/projects/project4.html
+++ b/projects/project4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project || Rakshit Gupta</title>
+    <title>Project Four | Rakshit Gupta</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" type="image/png" href="../assets/icon.png">
@@ -49,69 +49,67 @@
     </nav>
     <main class="container">
         <section class="project-detail">
-            <h2 style="font-size:2.5rem; margin-bottom:18px;">🍽️ Zinnger - Restaurant Landing Page</h2>
-            <a href="https://github.com/Rakshitgupta9/Zingger-Restaurant_Web_page" target="_blank" rel="noopener"
-                class="download-btn" style="margin-bottom: 18px; display: inline-block; font-size: 1.1rem;">View on
-                GitHub <i class="fab fa-github"></i></a>
-            <a href="https://rakshitgupta9.github.io/Zingger-Restaurant_Web_page/" target="_blank" rel="noopener"
-                class="download-btn"
-                style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem; margin-left: 12px;">Live View <i
-                    class="fas fa-external-link-alt"></i></a>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Overview</h3>
-            <p style="font-size:1.18rem; line-height:1.7;">Welcome to Zinnger - a responsive and dynamic restaurant
-                landing page designed and developed to enhance the digital presence of our restaurant. This project
-                encompasses a range of features, from an interactive menu with online ordering to a seamless table
-                booking system. Dive into the world of Zinnger and explore what we have to offer!</p>
+            <h2 style="font-size:2.5rem; margin-bottom:18px;">💻 Test Platform Using Linux Shell Scripting</h2>
+            <a href="https://github.com/Rakshitgupta9/Test-Platform-Using-Linux-Shell-scripting" target="_blank"
+                rel="noopener" class="download-btn"
+                style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on GitHub <i
+                    class="fab fa-github"></i></a>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Project Overview</h3>
+            <p style="font-size:1.18rem; line-height:1.7;">This project is a login-based Online Test Platform created on
+                Linux using shell scripting. It leverages pattern matching commands and file handling concepts to
+                provide a secure, interactive, and automated test-taking experience directly in the terminal.</p>
             <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">✨ Features</h3>
             <div class="feature-cards">
                 <div class="feature-card">
-                    <h4>🍽️ Dynamic Menu</h4>
+                    <h4>🔐 Login/Sign-Up System</h4>
                     <ul>
-                        <li>Browse through our diverse range of dishes and beverages.</li>
-                        <li>Customize orders and view a running total.</li>
-                        <li>Seamless integration with various payment gateways.</li>
+                        <li>Secure user authentication with username and password</li>
+                        <li>Sign-up and sign-in options for new and returning users</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>📅 Table Booking</h4>
+                    <h4>⏰ Timed Test Sessions</h4>
                     <ul>
-                        <li>Effortlessly book a table by providing necessary details.</li>
-                        <li>Agree to terms and conditions for a transparent booking process.</li>
-                        <li>Receive instant confirmation of your reservation.</li>
+                        <li>Each question is timed (30 seconds per question)</li>
+                        <li>Automatic timeout and progress to next question</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>👨‍💼 Admin Portal</h4>
+                    <h4>🎲 Randomized Questions</h4>
                     <ul>
-                        <li>Secure login for authorized personnel.</li>
-                        <li>Access details about orders and table bookings for efficient management.</li>
+                        <li>Random selection of 10 questions from a question bank</li>
+                        <li>Ensures a unique test experience for each attempt</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>📸 Gallery</h4>
+                    <h4>📊 Result & Review</h4>
                     <ul>
-                        <li>Visual showcase of our restaurant's ambiance and culinary creations.</li>
-                        <li>Engaging images and videos to provide a glimpse of the Zinnger experience.</li>
+                        <li>Displays total score and correct answers after test completion</li>
+                        <li>Option to retake the test, view answers, or go to profile</li>
                     </ul>
                 </div>
                 <div class="feature-card">
-                    <h4>ℹ️ About Us</h4>
+                    <h4>👤 Profile Management</h4>
                     <ul>
-                        <li>Explore the restaurant's history, philosophy, and team.</li>
-                        <li>Share your feedback through our user-friendly feedback section.</li>
+                        <li>View and manage user profile details</li>
+                    </ul>
+                </div>
+                <div class="feature-card">
+                    <h4>🐚 Shell Scripting Concepts</h4>
+                    <ul>
+                        <li>Pattern matching, file handling, and process management</li>
+                        <li>Use of arrays, functions, and control structures in bash</li>
                     </ul>
                 </div>
             </div>
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">💻 Technologies Used</h3>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">💻 Tech Stack</h3>
             <div class="tech-slider">
                 <div class="tech-track">
-                    <div class="tech-card">HTML5</div>
-                    <div class="tech-card">CSS3</div>
-                    <div class="tech-card">JavaScript (ES6)</div>
-                    <div class="tech-card">PHP</div>
-                    <div class="tech-card">MySQL</div>
-                    <div class="tech-card">phpMyAdmin</div>
-                    <div class="tech-card">Visual Studio Code (IDE)</div>
+                    <div class="tech-card">Linux</div>
+                    <div class="tech-card">Bash Shell Scripting</div>
+                    <div class="tech-card">File Handling</div>
+                    <div class="tech-card">Pattern Matching</div>
+                    <div class="tech-card">Process Management</div>
                 </div>
             </div>
         </section>
