--- a/projects/project5.html
+++ b/projects/project5.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project || Rakshit Gupta</title>
+    <title>Zinnger - Restaurant Landing Page | Rakshit Gupta</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" type="image/png" href="../assets/icon.png">
@@ -49,147 +49,70 @@
     </nav>
     <main class="container">
         <section class="project-detail">
-            <h2 style="font-size:2.5rem; margin-bottom:18px;">🌾 AI-Powered Smart Farming Assistance Portal</h2>
-            <a href="https://github.com/Rakshitgupta9/AI-Powered-Smart-Farming-Assistance" target="_blank"
-                rel="noopener" class="download-btn"
-                style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on GitHub <i
-                    class="fab fa-github"></i></a>
-
-            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Overview</h3>
-            <p style="font-size:1.18rem; line-height:1.7;">Our AI-Powered Smart Farming Assistance Portal is a holistic, tech-enabled solution aimed at empowering small and marginal farmers by leveraging Artificial Intelligence (AI) and Machine Learning (ML). The platform addresses critical agricultural challenges including climate change impacts, soil degradation, limited access to real-time information, and outdated farming practices.</p>
-
-            <div style="margin-top: 30px;">
-                <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Key Features</h3>
-                <div class="feature-cards">
-                    <div class="feature-card">
-                        <h4>🌱 Crop Recommendations</h4>
-                        <ul>
-                            <li>Personalized crop suggestions based on soil and environmental data</li>
-                            <li>ML-powered analysis for optimal crop selection</li>
-                            <li>Climate-adaptive recommendations</li>
-                        </ul>
-                    </div>
-                    <div class="feature-card">
-                        <h4>🧪 Soil Health Analysis</h4>
-                        <ul>
-                            <li>Image-based analysis for moisture detection</li>
-                            <li>Fertility assessment and nutrient deficiency identification</li>
-                            <li>Real-time soil condition evaluation</li>
-                        </ul>
-                    </div>
-                    <div class="feature-card">
-                        <h4>🌿 Plant Disease Detection</h4>
-                        <ul>
-                            <li>AI model diagnoses crop diseases from uploaded images</li>
-                            <li>Early detection and prevention strategies</li>
-                            <li>Remedial action recommendations</li>
-                        </ul>
-                    </div>
-                    <div class="feature-card">
-                        <h4>💰 Market Price Insights</h4>
-                        <ul>
-                            <li>Real-time pricing data for various crops</li>
-                            <li>Market trend analysis and predictions</li>
-                            <li>Profitability optimization suggestions</li>
-                        </ul>
-                    </div>
-                    <div class="feature-card">
-                        <h4>🤖 AI Chatbot Assistant</h4>
-                        <ul>
-                            <li>24/7 farming assistance and guidance</li>
-                            <li>Powered by GPT-4 and Rasa</li>
-                            <li>Conversational support for farming queries</li>
-                        </ul>
-                    </div>
-                    <div class="feature-card">
-                        <h4>🔐 Secure Authentication</h4>
-                        <ul>
-                            <li>Data privacy protection using bcrypt</li>
-                            <li>Secure user registration and login</li>
-                            <li>Protected access to farming insights</li>
-                        </ul>
-                    </div>
+            <h2 style="font-size:2.5rem; margin-bottom:18px;">🍽️ Zinnger - Restaurant Landing Page</h2>
+            <a href="https://github.com/Rakshitgupta9/Zingger-Restaurant_Web_page" target="_blank" rel="noopener"
+                class="download-btn" style="margin-bottom: 18px; display: inline-block; font-size: 1.1rem;">View on
+                GitHub <i class="fab fa-github"></i></a>
+            <a href="https://rakshitgupta9.github.io/Zingger-Restaurant_Web_page/" target="_blank" rel="noopener"
+                class="download-btn"
+                style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem; margin-left: 12px;">Live View <i
+                    class="fas fa-external-link-alt"></i></a>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Overview</h3>
+            <p style="font-size:1.18rem; line-height:1.7;">Welcome to Zinnger - a responsive and dynamic restaurant
+                landing page designed and developed to enhance the digital presence of our restaurant. This project
+                encompasses a range of features, from an interactive menu with online ordering to a seamless table
+                booking system. Dive into the world of Zinnger and explore what we have to offer!</p>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">✨ Features</h3>
+            <div class="feature-cards">
+                <div class="feature-card">
+                    <h4>🍽️ Dynamic Menu</h4>
+                    <ul>
+                        <li>Browse through our diverse range of dishes and beverages.</li>
+                        <li>Customize orders and view a running total.</li>
+                        <li>Seamless integration with various payment gateways.</li>
+                    </ul>
+                </div>
+                <div class="feature-card">
+                    <h4>📅 Table Booking</h4>
+                    <ul>
+                        <li>Effortlessly book a table by providing necessary details.</li>
+                        <li>Agree to terms and conditions for a transparent booking process.</li>
+                        <li>Receive instant confirmation of your reservation.</li>
+                    </ul>
+                </div>
+                <div class="feature-card">
+                    <h4>👨‍💼 Admin Portal</h4>
+                    <ul>
+                        <li>Secure login for authorized personnel.</li>
+                        <li>Access details about orders and table bookings for efficient management.</li>
+                    </ul>
+                </div>
+                <div class="feature-card">
+                    <h4>📸 Gallery</h4>
+                    <ul>
+                        <li>Visual showcase of our restaurant's ambiance and culinary creations.</li>
+                        <li>Engaging images and videos to provide a glimpse of the Zinnger experience.</li>
+                    </ul>
+                </div>
+                <div class="feature-card">
+                    <h4>ℹ️ About Us</h4>
+                    <ul>
+                        <li>Explore the restaurant's history, philosophy, and team.</li>
+                        <li>Share your feedback through our user-friendly feedback section.</li>
+                    </ul>
                 </div>
             </div>
-
-            <div style="margin-top: 30px;">
-                <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">How It Works</h3>
-                <div class="feature-cards">
-                    <div class="feature-card">
-                        <h4>1. User Authentication</h4>
-                        <p>Secure login and registration system for farmers with data protection</p>
-                    </div>
-                    <div class="feature-card">
-                        <h4>2. Crop Recommendation</h4>
-                        <p>ML model analyzes soil and environmental data to suggest optimal crops</p>
-                    </div>
-                    <div class="feature-card">
-                        <h4>3. Soil Analysis</h4>
-                        <p>Farmers upload soil images for comprehensive condition evaluation</p>
-                    </div>
-                    <div class="feature-card">
-                        <h4>4. Disease Detection</h4>
-                        <p>Upload crop images to detect diseases and receive treatment remedies</p>
-                    </div>
-                    <div class="feature-card">
-                        <h4>5. Market Insights</h4>
-                        <p>Access up-to-date crop prices and market trends for informed decisions</p>
-                    </div>
-                    <div class="feature-card">
-                        <h4>6. AI Chatbot</h4>
-                        <p>24/7 conversational support and farming guidance assistance</p>
-                    </div>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">💻 Technologies Used</h3>
+            <div class="tech-slider">
+                <div class="tech-track">
+                    <div class="tech-card">HTML5</div>
+                    <div class="tech-card">CSS3</div>
+                    <div class="tech-card">JavaScript (ES6)</div>
+                    <div class="tech-card">PHP</div>
+                    <div class="tech-card">MySQL</div>
+                    <div class="tech-card">phpMyAdmin</div>
+                    <div class="tech-card">Visual Studio Code (IDE)</div>
                 </div>
-            </div>
-
-            <div style="margin-top: 30px;">
-                <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Technology Stack</h3>
-                <h4 style="color:#7ec4ff; margin-bottom:6px; margin-top:18px;">Frontend & Backend</h4>
-                <div class="tech-slider">
-                    <div class="tech-track">
-                        <div class="tech-card">HTML5</div>
-                        <div class="tech-card">CSS3</div>
-                        <div class="tech-card">Flask (Python)</div>
-                        <div class="tech-card">MongoDB</div>
-                    </div>
-                </div>
-                <h4 style="color:#7ec4ff; margin-bottom:6px; margin-top:18px;">AI/ML & Image Processing</h4>
-                <div class="tech-slider">
-                    <div class="tech-track">
-                        <div class="tech-card">TensorFlow</div>
-                        <div class="tech-card">Scikit-learn</div>
-                        <div class="tech-card">OpenCV</div>
-                        <div class="tech-card">Machine Learning Models</div>
-                    </div>
-                </div>
-                <h4 style="color:#7ec4ff; margin-bottom:6px; margin-top:18px;">Chatbot & Security</h4>
-                <div class="tech-slider">
-                    <div class="tech-track">
-                        <div class="tech-card">GPT-4</div>
-                        <div class="tech-card">Rasa</div>
-                        <div class="tech-card">Bcrypt</div>
-                        <div class="tech-card">Secure Authentication</div>
-                    </div>
-                </div>
-            </div>
-
-            <div style="margin-top: 30px;">
-                <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">UN SDG Goals Alignment</h3>
-                <div class="feature-cards">
-                    <div class="feature-card">
-                        <h4>🎯 SDG 8 – Decent Work and Economic Growth</h4>
-                        <p>Increases productivity and financial outcomes for farmers using AI insights, leading to better economic stability and growth in agricultural communities.</p>
-                    </div>
-                    <div class="feature-card">
-                        <h4>🏭 SDG 9 – Industry, Innovation and Infrastructure</h4>
-                        <p>Promotes sustainable agriculture through cutting-edge technologies, fostering innovation in farming practices and infrastructure development.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div style="margin-top: 30px;">
-                <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">Project Impact</h3>
-                <p style="font-size:1.18rem; line-height:1.7;">This project addresses critical challenges faced by small and marginal farmers, including climate change impacts, soil degradation, limited access to real-time information, and outdated farming practices. By leveraging AI and ML technologies, it provides farmers with data-driven insights to improve crop productivity, reduce financial instability, and minimize economic losses.</p>
             </div>
         </section>
     </main>
