--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
                 <div class="feature-card">
                     <a href="docs/certificates/2.pdf" style="text-decoration: none;" target="_blank">
-                        <h4>Basics of Python</h4>
+                        <h4>Python for Data Science, AI & Development</h4>
                         <div class="certification-issuer">Coursera</div>
                     </a>
                 </div>
@@ -318,7 +318,7 @@
                 <div class="feature-card">
                     <a href="docs/certificates/4.pdf" style="text-decoration: none;" target="_blank">
                         <h4>Python for Computer Vision with OpenCV and Deep Learning</h4>
-                        <div class="certification-issuer">Swayam</div>
+                        <div class="certification-issuer">Infosys</div>
                     </a>
                 </div>
 
@@ -332,7 +332,7 @@
                 <div class="feature-card">
                     <a href="docs/certificates/6.pdf" style="text-decoration: none;" target="_blank">
                         <h4>JavaScript Algorithms and Data Structures</h4>
-                        <div class="certification-issuer">Swayam</div>
+                        <div class="certification-issuer">freeCodeCamp</div>
                     </a>
                 </div>
 
